[package]
name = "orixdb"
version = "0.0.1"
authors = ["archnim <archnim01@gmail.com>"]
edition = "2021"
description = "A simple multi-model NoSQL database, queried with GraphQL"
repository = "https://github.com/orixdb/orixdb"
license = "MIT"
keywords = ["database", "dbms", "NoSQL", "multi-model"]
categories = ["database-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
