[package]
name = "orixdb"
version = "0.0.1"
authors = ["archnim <archnim01@gmail.com>"]
edition = "2021"
description = "A simple multi-model NoSQL database, queried with GraphQL"
repository = "https://github.com/orixdb/orixdb"
license = "MIT"
keywords = ["database", "dbms", "NoSQL", "multi-model"]
categories = ["database-implementations"]

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
clap = {version = "4", features = ["string"]}
